# minecraft-ai-advisor

./: context_preparator.py  encoder.py  graph.py  main.py  prompts.py  pyproject.toml  readme.md  tables_creator.sql  tools.py
app/: context_preparator.py  encoder.py  graph.py  main.py  prompts.py  tools.py
app/.chainlit/: config.toml
deprecated/: context_extractor.py  selenium_search.py  web_search.py
learn/: main.py  streamlit_learn.py
public/: my_js_script.js
