[tool.poetry]
name = "minecraft-mods-advisor"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shestakov <103767386+avtorgenii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-ollama = "0.2.0"
langchain-openai = "^0.2.14"
langgraph = "^0.2.60"
selenium = "^4.27.1"
duckduckgo-search = "^7.1.1"
scikit-learn = "^1.6.0"
bs4 = "^0.0.2"
sentence-transformers = "^3.3.1"
pydantic = "2.10.1"
langgraph-checkpoint-sqlite = "^2.0.1"
aiosqlite = "^0.20.0"
chainlit = "^1.3.2"

# Additional dependencies
litellm = ">=1.53.1"
numpy = ">=1.26.0,<3"
pillow = "~10.4"
playwright = ">=1.49.0"
python-dotenv = "~1.0"
requests = "~2.26"
beautifulsoup4 = "~4.12"
tf-playwright-stealth = ">=1.1.0"
xxhash = "~3.4"
rank-bm25 = "~0.2"
colorama = "~0.4"
snowballstemmer = "~2.2"
pyOpenSSL = ">=24.3.0"
psutil = ">=6.1.1"
nltk = ">=3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
