[tool.poetry]
name = "minecraft-mods-advisor"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shestakov <103767386+avtorgenii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-ollama = "0.2.0"
langchain-openai = "^0.2.14"
langgraph = "^0.2.60"
selenium = "^4.27.1"
duckduckgo-search = "^7.1.1"
scikit-learn = "^1.6.0"
bs4 = "^0.0.2"
sentence-transformers = "^3.3.1"
pydantic = "2.10.1"
langgraph-checkpoint-sqlite = "^2.0.1"
aiosqlite = "^0.20.0"
chainlit = "^1.3.2"
googlesearch-python = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
